--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8080
 
 spring.session.store-type=redis
+spring.session.redis.flush-mode=ON_SAVE
 spring.redis.host=150.149.49.83
 spring.redis.password=alskfl12~!
 spring.redis.port=30379
